syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantProfileService{
    rpc GetApplicantProfile(IdRequestApplicantProfile) returns (ApplicantProfileObj);
    rpc CreateApplicantProfile(ApplicantProfileObjs) returns (google.protobuf.Empty);
    rpc UpdateApplicantProfile(ApplicantProfileObjs) returns (google.protobuf.Empty);
    rpc DeleteApplicantProfile(ApplicantProfileObjs) returns (google.protobuf.Empty);
}

message IdRequestApplicantProfile{
    string Id = 1;
}

message ApplicantProfileObj{
    string Id = 1;
    string Login = 2;        
    google.protobuf.DoubleValue CurrentSalary = 3;        
    google.protobuf.DoubleValue CurrentRate = 4;        
    string Currency = 5;       
    string Country = 6;        
    string Province = 7;        
    string Street = 8;       
    string City = 9;       
    string PostalCode = 10;
}

message ApplicantProfileObjs{
	repeated ApplicantProfileObj Obj = 1;
}
